Update connection string

--- a/FoodDelivery/appsettings.json
+++ b/FoodDelivery/appsettings.json
@@ -8,6 +8,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "ApplicationDbContext": "Server=(localdb)\\mssqllocaldb;Database=ApplicationDbContext-c6be33e0-76cb-46e8-b752-d2a7cf9d3b42;Trusted_Connection=True;MultipleActiveResultSets=true"
+    //"ApplicationDbContext": "Server=(localdb)\\mssqllocaldb;Database=ApplicationDbContext-c6be33e0-76cb-46e8-b752-d2a7cf9d3b42;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "ApplicationDbContext": "Server=titan.cs.weber.edu,10433;Database=FoodDelivery_Gradner;user id=4790;password=4790$tudent"
   }
 }
