Added html and fields for updating menuitems, images can be uploaded and updated

--- a/FoodDelivery/FoodDelivery.csproj
+++ b/FoodDelivery/FoodDelivery.csproj
@@ -28,4 +28,8 @@
     <ProjectReference Include="..\FoodDelivery.Utility\FoodDelivery.Utility.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="wwwroot\images\menuitems\" />
+  </ItemGroup>
+
 </Project>
