Added a reference to Utility project

--- a/DataAccess/FoodDelivery.DataAccess.csproj
+++ b/DataAccess/FoodDelivery.DataAccess.csproj
@@ -18,6 +18,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\FoodDelivery.Models\FoodDelivery.Models.csproj" />
+    <ProjectReference Include="..\FoodDelivery.Utility\FoodDelivery.Utility.csproj" />
   </ItemGroup>
 
 </Project>
