--- a/FoodDelivery/appsettings.json
+++ b/FoodDelivery/appsettings.json
@@ -9,5 +9,9 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "ApplicationDbContext": "Server=titan.cs.weber.edu,10433;Database=FoodDelivery_Gradner;user id=4790;password=4790$tudent"
+  },
+  "Stripe": {
+    "SecretKey": "sk_test_",
+    "PublishableKey": "pk_test_"
   }
 }
