--- a/DataAccess/Infrastructure.csproj
+++ b/DataAccess/Infrastructure.csproj
@@ -19,11 +19,11 @@
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
+    <PackageReference Include="SendGrid" Version="9.21.2" />
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\FoodDelivery.Models\FoodDelivery.Models.csproj" />
-    <ProjectReference Include="..\FoodDelivery.Utility\FoodDelivery.Utility.csproj" />
+    <ProjectReference Include="..\FoodDelivery.Models\ApplicationCore.csproj" />
   </ItemGroup>
 
 </Project>
