Moved verification file to wwwroot

--- a/FoodDelivery/FoodDelivery.csproj
+++ b/FoodDelivery/FoodDelivery.csproj
@@ -33,4 +33,8 @@
     <Folder Include="wwwroot\images\menuitems\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <None Include="wwwroot\loaderio-fe9f2d04028025e84027ec20ba24af3c.txt" />
+  </ItemGroup>
+
 </Project>
